Added some to readings

--- a/_readings/overview.tex
+++ b/_readings/overview.tex
@@ -200,6 +200,17 @@ To get closer to the markov property, it would be super duper helpful to have th
 
 Section 3.6
 
+Covers the Markov Decision Process.
+
+Section 3.7
+
+Tells us how to compute the value function in a 'Dynamic Programming' way.
+I.e. it assumes the markov property then defines the value function in terms of successor value functions.
+This feels like a dynamic programming problem.
+We have to know lots, mostly we do have to know 
+\item the underlying policy
+\item probability of encountering
+
 
 \textit{https://arxiv.org/pdf/1507.04296.pdf}
 cited by 45
