--- a/_proposal/execsummary.tex
+++ b/_proposal/execsummary.tex
@@ -2,9 +2,10 @@
 
 The Office of Strategic National Alien Planning (OSNAP) has made a substantial investment in a mech defense system titled Kirby. 
 As part of the acquisition, a simulation system Super Smash Bros. (SSB) was provided for training our Kirby effectively.
-K-AID is an artifical intelligence engine we will create to control Kirby in SSB.
+K-AID is an artifical intelligence engine we created to control Kirby in SSB.
 
-K-AID will gather information directly from the simulation's memory space about Kirby and the opponnent.
-Included in this information is location, velocity, acceleration, enemy action-state, damage dealt, and finally life loss.
-Using this information about state and reward, K-AID will determine a correct action to take in order to maximize future reward (i.e. destroying the enemy without loss of life).
-The primary technique will be reinforcement learning to construct a deep nueral network.
+K-AID gathers state information directly from the simulation's memory space about Kirby and the opponnent.
+Included in this information is location, velocity, acceleration, enemy action, damage dealt, and finally life loss.
+We pack all of this information into a reinforcement learning model consisting of state, action, and reward.
+Using this model, K-AID determines a correct action to take in order to maximize future reward (i.e. destroying the enemy without loss of life).
+The technique used is reinforcement learning implemented using a parallelized deep neural network.
